# NESO

./: .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_cppyy.md  activate  cppyy_run.py  hello_test.cc  mesh_test.cc  neso_viking_modules  plasma_test.cc  requirements.txt  spack.yaml
benchmark/: CMakeLists.txt
benchmark/projection/: args.cpp  benchmark.cpp  create_data.hpp
benchmark/projection/include/: args.hpp  create_data.hpp
solvers/: CMakeLists.txt  main.cpp
solvers/Benchmark/: CMakeLists.txt  hdf5_results_writer.hpp  main.cpp  main_evaluation.cpp  main_evaluation.hpp  main_projection.cpp  main_projection.hpp
solvers/Benchmark/ParticleSystems/: evaluate_project_system.hpp
solvers/Diffusion/: CMakeLists.txt  Diffusion.cpp  Diffusion.hpp  main.cpp
solvers/Diffusion/EquationSystems/: CwipiDiffTensorSender.cpp  CwipiDiffTensorSender.hpp  CwipiReceiveDiffTensorAndDiffuse.cpp  CwipiReceiveDiffTensorAndDiffuse.hpp  CwipiUtils.hpp  DiffusionSystem.cpp  DiffusionSystem.hpp
solvers/DriftPlane/: CMakeLists.txt  main.cpp
solvers/DriftPlane/EquationSystems/: Blob2DSystem.cpp  Blob2DSystem.hpp  DriftPlaneSystem.cpp  DriftPlaneSystem.hpp
solvers/DriftPlane/RiemannSolvers/: DriftUpwindSolver.hpp
solvers/DriftReduced/: CMakeLists.txt  main.cpp
solvers/DriftReduced/Diagnostics/: GrowthRatesRecorder.hpp  MassRecorder.hpp
solvers/DriftReduced/EquationSystems/: DriftReducedSystem.cpp  DriftReducedSystem.hpp  HW2DSystem.cpp  HW2DSystem.hpp  HW3DSystem.cpp  HW3DSystem.hpp  HWSystem.cpp  HWSystem.hpp  LAPDSystem.cpp  LAPDSystem.hpp  RogersRicci2D.cpp  RogersRicci2D.h  RogersRicci2DSystem.cpp  RogersRicci2DSystem.hpp
solvers/DriftReduced/ParticleSystems/: NeutralParticleSystem.cpp  NeutralParticleSystem.hpp
solvers/Electrostatic2D3V/: CMakeLists.txt  Electrostatic2D3V.cpp  ElectrostaticElectronBernsteinWaves2D3V.hpp  ElectrostaticTwoStream2D3V.hpp
solvers/Electrostatic2D3V/Diagnostics/: FieldEnergy.hpp  FieldMean.hpp  KineticEnergy.hpp  LineFieldEvaluations.hpp  PotentialEnergy.hpp  field_energy.hpp  field_mean.hpp  field_normalisation.hpp  generic_hdf5_writer.hpp  kinetic_energy.hpp  line_field_evaluations.hpp  potential_energy.hpp
solvers/Electrostatic2D3V/EquationSystems/: Laplace.cpp  Laplace.h  Poisson.cpp  PoissonPIC.cpp  PoissonPIC.h  PoissonPIC.hpp
solvers/Electrostatic2D3V/ParticleSystems/: ChargedParticles.hpp  IntegratorBorisUniformB.hpp  PoissonParticleCoupling.hpp  boris_integrator.hpp  charged_particles.hpp  parallel_initialisation.hpp  poisson_particle_coupling.cpp  poisson_particle_coupling.hpp
solvers/H3-LAPD/: CMakeLists.txt
solvers/H3-LAPD/Forcing/: H3LAPDSources.cpp  H3LAPDSources.h
solvers/H3LAPD/: CMakeLists.txt  H3LAPD.cpp  H3LAPD.h  H3LAPD.hpp  main.cpp
solvers/H3LAPD/Diagnostics/: GrowthRatesRecorder.hpp  MassRecorder.hpp  energy_conservation.hpp  mass_conservation.hpp
solvers/H3LAPD/EquationSystems/: DriftReducedSystem.cpp  DriftReducedSystem.hpp  H3LAPDSystem.cpp  H3LAPDSystem.h  H3LAPDSystem.hpp  HW2DSystem.cpp  HW2DSystem.hpp  HW2Din3DSystem.cpp  HW2Din3DSystem.hpp  HW3DSystem.cpp  HW3DSystem.hpp  HWSystem.cpp  HWSystem.h  HWSystem.hpp  LAPDSystem.cpp  LAPDSystem.hpp  RogersRicci2D.cpp  RogersRicci2D.h
solvers/H3LAPD/ParticleSystems/: NeutralParticleSystem.cpp  NeutralParticleSystem.hpp  neutral_particles.hpp
solvers/MaxwellWave2D3V/: CMakeLists.txt  LorenzBoris.hpp  MaxwellWave2D3V.cpp  MaxwellWave2D3VDriver.hpp  RingBeam2D3V.hpp  StaggeredLorenzBoris.hpp
solvers/MaxwellWave2D3V/Diagnostics/: FieldEnergy.hpp  FieldMean.hpp  GridFieldEvaluations.hpp  KineticEnergy.hpp  MaximumSpeed.hpp  Momentum.hpp  PotentialEnergy.hpp  field_energy.hpp  kinetic_energy.hpp  line_field_evaluations.hpp  potential_energy.hpp
solvers/MaxwellWave2D3V/EquationSystems/: MaxwellWavePIC.cpp  MaxwellWavePIC.h  MaxwellWaveSystem.cpp  MaxwellWaveSystem.h  UnitConverter.hpp  WaveEquationPIC.cpp  WaveEquationPIC.h
solvers/MaxwellWave2D3V/ParticleSystems/: ChargedParticles.hpp  IntegratorBoris.hpp  MaxwellWaveParticleCoupling.hpp  ParticleInitialCondition.hpp  boris_integrator.hpp  charged_particles.hpp  maxwell_wave_particle_coupling.hpp  particle_initial_condition.hpp
solvers/MeshPlotting/: CMakeLists.txt  MeshPlotting.cpp  MeshPlottingInner.cpp
solvers/NeutralBaseParticleSolver/ParticleSystems/: charged_particles.hpp
solvers/SimpleSOL/: CMakeLists.txt  SimpleSOL.cpp  SimpleSOL.h  SimpleSOL.hpp  main.cpp
solvers/SimpleSOL/Diagnostics/: MassRecording.hpp  mass_conservation.hpp  momentum_conservation.hpp
solvers/SimpleSOL/EquationSystems/: SOLSystem.cpp  SOLSystem.h  SOLSystem.hpp  SOLWithParticlesSystem.cpp  (+2 more)
solvers/common/: solver_utils.hpp
solvers/test/: CMakeLists.txt  main.cpp  solver_test_utils.cpp  solver_test_utils.hpp
src/nektar/: CMakeLists.txt
test/: CMakeLists.txt  README.md  diagnostics_test.cc  fft_mkl_test.cc  fft_test.cc  main.cpp  mesh_test.cc  mms_test.cc  plasma_test.cc  species_test.cc  test_diagnostics.cpp  test_fft.cpp  test_fft_mkl.cpp  test_geometry_transport_2d.cpp  test_mesh.cpp  test_mms.cpp  test_particle_advection.cpp  test_particle_function_evaluation.cpp  test_particle_function_projection.cpp  test_particle_geometry_interface.cpp  test_particle_mapping.cpp  test_plasma.cpp  test_species.cpp
test/common/: SolverTest.cpp  SolverTest.hpp  solver_test_utils.cpp  solver_test_utils.hpp
test/integration/: test_mms.cpp
test/test_resources/: bad_invalid_argument_charge_exchange_h0_h1.csv  bad_out_of_double_range_charge_exchange_h0_h1.csv  charge_exchange_h0_h1.csv  conditions.xml  conditions_cg.xml  conditions_many_modes.xml  particle_reader.xml  square_triangles_quads.xml  square_triangles_quads_no_exp.xml  square_triangles_quads_nummodes_2.xml  square_triangles_quads_nummodes_6.xml  unit_square_0_05.xml  unit_square_0_5.xml
test/unit/: test_1D_linear_interpolator.cpp  test_atomic_data_readers.cpp  test_mesh.cpp  test_plasma.cpp  test_reader.cpp  test_solver_callback.cpp  test_species.cpp
tools/MeshPlotting/: CMakeLists.txt  MeshPlotting.cpp  MeshPlottingInner.cpp
(+579 files in other folders)
